test/error/E42.chigmod
{
	"name": "hello",
	"dependencies": ["hi"],
	"graphs": 23
}
